--- a/index.css
+++ b/index.css
@@ -37,6 +37,19 @@
     align-items: center;
     cursor: pointer;
 }
+.para img{
+    width: 80px;
+    height: 80px;
+    margin: 10px;
+    transition: transform 0.3s ease;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.para img:hover{
+    transform: scale(2.5);
+}
 
 nav{
     display: flex;
@@ -260,7 +273,7 @@ background: rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, 0.5);
    margin-bottom: 50px;
    padding-top: 10px;
-   padding-bottom: 10px;
+   padding-bottom: 200px;
    
 }
 .about h1{
@@ -431,6 +444,126 @@ footer {
     flex-basis: 15%;
 }
 
+/*--------------SKILLS----------------*/
+.service img{
+    position: relative;
+}
+.serviceA img{
+    position: relative;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+section {
+    padding: 2rem 0;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.container img , .containerA img{
+    width: 50px;
+    margin: 10px;
+    height: 50px;
+    transition: transform 0.3s ease;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
+
+}
+.container img:hover {
+    transform: scale(1.5);
+}
+.containerA img:hover {
+    transform: scale(1.5);
+}
+.services {
+    display: flex;
+    justify-content: space-around;
+}
+.container .btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    position: center;
+}
+.service {
+    flex: 1;
+    padding: 1rem;
+    margin: 0 1rem;
+    background: #f4f4f4;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5;
+}
+.service:hover{
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+section h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+section h3 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+section p{
+    text-align: center; 
+}
+section h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+section {
+    padding: 2rem 0;
+}
+
+.containerA {
+    width: 80%;
+    margin: 0 auto;
+}
+.servicesA {
+    display: flex;
+    justify-content: space-around;
+}
+.containerA .btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    position: center;
+}
+.serviceA {
+    flex: 1;
+    padding: 1rem;
+    margin: 0 1rem;
+    background: #f4f4f4;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5;
+}
+
+
+.serviceA:hover{
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+
+
+
+
 /*---------------testing-----------------------*/
 
 footer{
@@ -440,13 +573,26 @@ footer{
     background: linear-gradient(to right, #2323be, #e0d8d5);
     color: #fff;
     padding: 100px 0 30px;
-    border-top-right-radius: 80px;
+   
     border-bottom-left-radius: 80px;
     font-size: 13px;
     line-height: 20px;
 }
 .footer p{
     color: #fff;
+}
+.logo1{
+    width: 80px;
+    height: 150px;
+    margin: 10px;
+    transition: transform 0.3s ease;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.logo1:hover{
+    transform: scale(2.0);
 }
 .row{
     width: 85%;
@@ -635,6 +781,26 @@ hr{
         display: inline-block;
         justify-content: space-between;
     } */
+
+
+    /*-------------SKILLS----------*/
+    .servicesA ,.services{
+        display: block;
+        justify-content: space-around;
+        margin-top: 50px;
+        
+    }
+    .serviceA{
+        padding-top: 2px;
+        margin-top: 50px;
+    }
+    .service{
+        padding-top: 10px;
+        margin-top: 50px;
+    }
+    .containerA{
+        margin-top: -50px;
+    }
 
      /*--------------testing-----------------------*/
      
