--- a/index.css
+++ b/index.css
@@ -5,12 +5,7 @@
 }
 /*-------testing------*/
 .header{
-   /* min-height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(0,0,0, 0.7),rgba(0,0,0,0.7)),url(PICTURES/BACK3.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative; */
+  
 
     background-image: url(G.webp);
     background-repeat: no-repeat;
@@ -129,8 +124,8 @@ nav .fa{
 }
 .img-bar1{
     width:30px ;
-    padding: 30px;
     display: none;
+   
 }
 .img-bar .img-bar1{
    
@@ -140,75 +135,6 @@ nav .fa{
     border-bottom-right-radius: 10px;
 }
 
-/*
-.navbar li{
-    display: inline-block;
-    margin: auto;
-    width: 100px;
-    padding: 5px;
-    height: 100px;
-    
-}
-.navbar a:link{
-    color: red;
-    background-color: transparent;
-    text-decoration: aqua;
-}
-.navbar a:visited{
-    color: rgb(199, 99, 157);
-    background-color: transparent;
-    text-decoration: line-through;
-}
-.navbar a:hover{
-    color: rgb(243, 156, 41);
-    background-color: transparent;
-    text-decoration: none;
-    transform: scale(1.5);
-}
-.navbar a:active{
-    color: rgb(158, 243, 60) ;
-    background-color: transparent;
-    text-decoration: solid;
-}
-.navbar ul li a:hover {
-    transform: scale(1.5);
-    padding: 1rem 0;
-    margin-top: 2rem;
-}
-.header{
-    background-image: url(G.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;  /*--for sticking the cover image---*/ /*
-    position: relative;
-    background-position: center;
-    height: 100vh;
-    color: white;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-} 
-.img-bar{
-    width:30px ;
-    display: none;
-}
-.img-bar1{
-  width:30px ;
-  padding: 30px;
-  display: none;
-}
-
-
-.navbar {
-width: 100%;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px 20px;
-background: rgba(0, 0, 0, 0.5);
-}
 /*---------------second pic / second page--------------------*/
 .pic {
    background-image: url(Graduate.jpg);
@@ -242,7 +168,7 @@ background: rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 310px;
     top: 100px;
-    width: 100px; /* 150 - 50 */
+    width: 100px; 
     height: 100px;
     cursor: pointer;
   }
@@ -251,7 +177,7 @@ background: rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 650px;
     top: 280px;
-    width: 200px; /* 360 - 290 */
+    width: 200px;
     height: 100px;
     cursor: pointer;
   }
@@ -259,9 +185,9 @@ background: rgba(0, 0, 0, 0.5);
   .area3 { /*-----diploma----*/
     
         position: absolute;
-        left: 1120px;
+        left: 993px;
         top: 60px;
-        width: 50px; /* 600 - 500 */
+        width: 200px; 
         height: 120px;
         cursor: pointer;
   }
@@ -383,66 +309,6 @@ background: rgba(0, 0, 0, 0.5);
     background-color: #eac0f7;
 }
 
-/*-----footer/the last page of web------*/
-/*
-footer {
-    background-image: url(B.jpg);
-    background: rgba(0, 0, 0, 0.5);
-    background-repeat: no-repeat;
-    background-size: auto;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-    margin-top: 2rem;
-}
-.social-media-icons {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-}
-
-.social-media-icons a img {
-    width: 40px;
-    height: 40px;
-    transition: transform 0.3s ease;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.social-media-icons a img:hover {
-    transform: scale(1.5);
-}
-.top .bottom .middle .T1 .T2{
-    padding: 20px;
-    float: left;
-}
-
-.T1 p{
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
-    padding-right: 150px;
-   
-}
-.T2{
-    margin-top: 5%;
-    display: inline-flex;
-    justify-content: space-between;
-}
-.col{
-    flex-basis: 25%;
-    padding: 10px;
-}
-.col:nth-child(2), .col:nth-child(3){
-    flex-basis: 15%;
-}
 
 /*--------------SKILLS----------------*/
 .service img{
@@ -560,6 +426,47 @@ section {
 .serviceA:hover{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
+/*---------------ABOUT-HTML---------------*/
+
+.hero {
+    background: #f4f4f4;
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.hero h2 {
+    margin-bottom: 1rem;
+}
+
+.hero a {
+    color: #0c0b0b;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.hero section {
+    padding: 2rem 0;
+}
+
+.hero h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.hero h3 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.hero p{
+    text-align: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    
+}
+.hero li a{
+    text-align: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
 
 
 
@@ -657,16 +564,6 @@ hr{
 
 
 
-/*
-.T1{
-    width: 85%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-between;
-} */
-
 /*------------MOBILE PHONE -----------------------*/
 
 @media(max-width: 700px){
@@ -681,8 +578,8 @@ hr{
     }
     .nav-links{
         position: absolute;
-        background: #8b8685;
-       background-image: url(photo-1711630175511-cf461c067e63.avif);
+       background-color: rgba(255, 255, 255, 0.2);
+       backdrop-filter: blur(10px);
         height: 100vh;
         width: 200px;
         top: 0;
@@ -713,10 +610,6 @@ hr{
     }
      
 
-    .img-bar1{
-        display: block;
-        cursor: pointer;
-    }
 
     /*-----------------the graduate--------------------*/
     .pic {
@@ -732,18 +625,18 @@ hr{
      }
     .area1 { /*-------------book--------------*/
         position: absolute;
-        left: 310px;
-        top: 100px;
-        width: 100px; /* 150 - 50 */
+        left: 130px;
+        top: 50px;
+        width: 100px; 
         height: 100px;
         cursor: pointer;
       }
       
       .area2 { /*------headddddddd-----*/
         position: absolute;
-        left: 650px;
-        top: 280px;
-        width: 200px; /* 360 - 290 */
+        left: 280px;
+        top: 160px;
+        width: 100px;
         height: 100px;
         cursor: pointer;
       }
@@ -751,10 +644,10 @@ hr{
       .area3 { /*-----diploma----*/
         
             position: absolute;
-            left: 1120px;
-            top: 60px;
+            left: 480px;
+            top: 50px;
             width: 50px; /* 600 - 500 */
-            height: 120px;
+            height: 70px;
             cursor: pointer;
       }
       .pic h1{
@@ -764,24 +657,6 @@ hr{
         padding-left: 160px;
         
   }
-
-    /*----foooter/ the last page of the web---*/
-    /*
-    .social-media-icons .img{
-        flex-basis: 100%;
-    } 
-    .col{
-        flex-basis: 100%;
-    }
-    .col:nth-child(2), .col:nth-child(3){
-        flex-basis: 100%;
-    }
-    .T2{
-        margin-top: 5%;
-        display: inline-block;
-        justify-content: space-between;
-    } */
-
 
     /*-------------SKILLS----------*/
     .servicesA ,.services{
